Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <img src="./images/leggo_my_eggo.jpg">
         </div>
 
-        <img src="./images/mudblood.jpg">
+        <div class="column"
+          <img src="./images/mudblood.jpg">
+        </div>
 
     </div>
 
