--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="./images/leggo_my_eggo.jpg" class="small">
         </div>
 
-        <div class="column"
+        <div class="column">
           <img src="./images/mudblood.jpg" class="small">
         </div>
 
